# psychly

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  start.sh
.github/workflows/: ci.yml
docs/: therapeutic-prompt-design.md
docs/superpowers/plans/: 2026-04-28-export-import.md  (+4 more)
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/analysis/: README.md
src-tauri/src/analysis/application/: analysis_prompt.rs  commands.rs  context_builder.rs  mod.rs  pipeline.rs  trends.rs
src-tauri/src/analysis/domain/: entity.rs  mod.rs  repository.rs
src-tauri/src/analysis/infrastructure/: mod.rs  sqlite_repository.rs
src-tauri/src/db/: mod.rs
src-tauri/src/export/: mod.rs  sqlite.rs
src-tauri/src/journal/: README.md
src-tauri/src/journal/application/: commands.rs
src-tauri/src/journal/domain/: entity.rs  mod.rs  repository.rs
src-tauri/src/journal/infrastructure/: mod.rs  sqlite_repository.rs
src-tauri/src/therapy/: README.md
src-tauri/src/therapy/application/: commands.rs  crisis_detection.rs  mod.rs  prompt_assembly.rs  system_prompt.rs
src-tauri/src/therapy/domain/: entity.rs  mod.rs  repository.rs
src-tauri/src/therapy/infrastructure/: mod.rs  ollama_client.rs  sqlite_repository.rs
src/api/: chat.ts  export.ts  journal.ts
src/components/: app-shell.ts  chat-session-list.ts  chat-view.ts  disclaimer-dialog.ts  export-dialog.ts  journal-editor.ts  journal-entry-view.ts  journal-list.ts  journal-search.ts
(+24 files in other folders)
